Format Ubuntu Dockerfile

--- a/ubuntu/ubuntu_14.04/Dockerfile
+++ b/ubuntu/ubuntu_14.04/Dockerfile
@@ -2,4 +2,16 @@ FROM ubuntu:14.04
 MAINTAINER Javier Tia <javier.tia@gmail.com>
 RUN apt-get update -y
 RUN apt-get upgrade -y
-RUN apt-get install -y build-essential devscripts fakeroot quilt dh-make automake libdistro-info-perl less cmake git libpcap-dev bzr-builder
+RUN apt-get install -y \
+    build-essential  \
+    devscripts \
+    fakeroot \
+    quilt \
+    dh-make \
+    automake \
+    libdistro-info-perl \
+    less \
+    cmake \
+    git \
+    libpcap-dev \
+    bzr-builder
