Avoid Debian frontend interactive

--- a/ubuntu-14.04/Dockerfile
+++ b/ubuntu-14.04/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:14.04
 MAINTAINER Javier Tia <javier.tia@gmail.com>
+ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install -y \
