Add user john in users group & no password

--- a/ubuntu-14.04/Dockerfile
+++ b/ubuntu-14.04/Dockerfile
@@ -18,3 +18,6 @@ RUN apt-get install -y \
     bzr-builder
 RUN apt-get clean
 
+RUN adduser --ingroup users --disabled-password \
+    --gecos 'User to develop' john
+
